refactor: improve code readability by reformatting annotations and variable declarations in test classes